2006-01-12	Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_menuitem):
	
	New-old menuitem style.
	
	* engines/clearlooks/src/clearlooks_style.c: (draw_handle):
	
	Fix broken toolbar handle orientation (again).

2006-01-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/lighthouseblue/src/lighthouseblue_style.c: (draw_slider),
	(draw_handle):
	Make sure the clip regions are reset again.

2006-01-05  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Reverted to 'forward motion' animation by default, when
	enabled. Disabled by default now.

2006-01-05  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):

	Removed some very unprofessional debugging output... 

2006-01-05  Richard Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):
	* engines/clearlooks/src/support.c: (cl_is_panel_widget):
	* engines/clearlooks/src/support.h:

	Renamed cl_is_gnome_panel to cl_is_panel_widget to catch
	applets as well. Don't ask me why the Window List applet
	likes to draw like a menubar, but it does.

2006-01-04  Thomas Wood  <thos@gnome.org>

	* engines/lighthouseblue/src/lighthouseblue_rc_style.c:
	(theme_parse_boolean):
	* engines/lighthouseblue/src/lighthouseblue_style.c: (draw_arrow),
	(lighthouseblue_style_class_init):
	* engines/lighthouseblue/src/util.c:

	Applied Lighthouseblue engine patch from bug 321140

2006-01-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc-style.c: (hc_draw_flat_box),
	(hc_style_class_init):
	Add a hc_draw_flat_box function, that calls the gtk_paint_box
	function for tooltips to avoid the hardcoded black border that
	the default engine uses. Closes bug #318151.

2006-01-02  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:
